fix tab_pane class which had its width reduced, but that messes up alignment on comment login page

--- a/site/media/master/stylesheet.css
+++ b/site/media/master/stylesheet.css
@@ -1554,7 +1554,7 @@ div.neutral {
 
 .tab_pane {
     border: 3px solid #D4D1CA;
-    width: 663px;
+    width: 703px;
     margin: 15px 0px 15px 231px;
     padding: 20px 0;
     min-height: 200px;
